PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

pts-core: Allow building virtual suites off external dependencies
pts-core: Various result viewer improvements
pts-core: Allow saving results under stress-run
pts-core: Responsive/mobile result viewer improvements
pts-core: Show local tests within the build-suite sub-command
pts_Graph: Restore capability for drawing mini graphs for all results in a result file overview

Phoronix Test Suite 9.6.0 Milestone 3
12 April 2020

pts-core: Allow automated per-thread/core/clock/RAM graphs within the result viewer
pts-core: Result viewer add "Limit displaying results to tests within:"
pts-core: From the result viewer allow "Show Geometric Means Per-Suite/Category"
pts-core: Add workload-topology sub-command
pts-core: Allow adding deprecated tests to build-suite
pts-core: CSV export improvements
pts-core: Add "Do Not Show Results With Incomplete Data" to the result viewer
pts-core: Allow test suite "Status" tag
pts-core: Don't report OB updates on deprecated tests or suites

Phoronix Test Suite 9.6.0 Milestone 2
5 April 2020

pts-core: Documentation updates
pts-core: External dependency updates
pts-core: Allow listing test profiles within the result viewer
pts-core: Allow listing test suites and test suite data within the result viewer
pts-core: Allow showing test profile information within the result viewer
pts-core: Various other updates to the result viewer
pts-core: Add vaapi as possible external dependency
update_checker: Add message of the day support

Phoronix Test Suite 9.6.0 Milestone 1
24 March 2020

pts-core: Add new analyze-run-times sub-command
pts-core: Allow hiding results from within the result viewer
pts-core: Allow generating performance-per-dollar metrics from within the result file
pts-core: Allow showing system logs from the result viewer
pts-core: Allow showing test description within the result viewer